crates/luck_bundler/tests/snapshots/integration__luau_string_interpolation.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
do
local __luck_modules={}
local __luck_loaded={}
local __luck_loading={}
local function __luck_result(...)
if select("#",...)~=1 or (...)==nil then
error("luck bundle: module must return exactly one non-nil value",0)
end
return ...
end
local function __luck_require(id)
local value=__luck_loaded[id]
if value~=nil then
if value==__luck_loading then error("luck bundle: require cycle hit while loading module #"..id,2)end
return value
end
__luck_loaded[id]=__luck_loading
value=__luck_result(__luck_modules[id]())
__luck_loaded[id]=value
return value
end
-- module #1: greeter.luau
__luck_modules[1]=function(...)
local greeter = {}

function greeter.hello(name: string): string
    local msg = `hello {name}`
    return msg
end

function greeter.farewell(name: string, time: string): string
    return `goodbye {name}, see you at {time}`
end

return greeter
end
local __luck_entry=function(...)
local greeter = __luck_require(1)

local result = greeter.hello("world")
print(result)
return result
end
return __luck_entry(...)
end
