crates/luck_bundler/tests/snapshots/integration__nested_deps.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
do
local __luck_modules={}
local __luck_loaded=type(package)=="table" and type(package.loaded)=="table" and package.loaded or {}
local __luck_preload=type(package)=="table" and type(package.preload)=="table" and package.preload or {}
local __luck_paths={}
local function __luck_require(name)
local value=__luck_loaded[name]
if value then return value end
local loaderdata
local loader=__luck_preload[name]
if loader then
loaderdata=":preload:"
else
loader=__luck_modules[name]
loaderdata=__luck_paths[name]
end
value=loader(name,loaderdata)
if value~=nil then __luck_loaded[name]=value end
value=__luck_loaded[name]
if value==nil then
value=true
__luck_loaded[name]=value
end
return value,loaderdata
end
-- module "c": c.lua
__luck_modules["c"]=function(...)
local c = {}

function c.base_value()
    return 21
end

return c
end
__luck_paths["c"]="c.lua"
-- module "b": b.lua
__luck_modules["b"]=function(...)
local c = __luck_require("c")

local b = {}

function b.get_value()
    return c.base_value() * 2
end

return b
end
__luck_paths["b"]="b.lua"
local __luck_entry=function(...)
local b = __luck_require("b")

local result = b.get_value()
print(result)
return result
end
return __luck_entry(...)
end
