crates/luck_bundler/tests/snapshots/integration__no_deps.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
print("hello")
return 42
